--- a/index.html
+++ b/index.html
@@ -12,6 +12,6 @@
     <div id="posts">
     </div>
 </div>
-<script src="js/main.js" type="module"></script>
+<script src="build/main.js" type="module"></script>
 </body>
 </html>
